samples/_failures_safe/1761318649_83c8e6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3cb6aab5.c: In function ‘main’:
./samples/SAFE/__tmp_3cb6aab5.c:158:28: error: missing terminating " character
  158 |                     printf("\nMatrix A
      |                            ^~~~~~~~~~~
./samples/SAFE/__tmp_3cb6aab5.c:158:21: error: expected expression at end of input
  158 |                     printf("\nMatrix A
      |                     ^~~~~~
./samples/SAFE/__tmp_3cb6aab5.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3cb6aab5.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3cb6aab5.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3cb6aab5.c:158:21: error: expected declaration or statement at end of input
